<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>golfcar_control</name>
  <version>0.0.0</version>
  <description>control and automate a golf car</description>
  <maintainer email="hazem.ashraf.saleh@gmail.com">Hazem Ashraf</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>

  <!-- Runtime only dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>Flask</exec_depend>
  <exec_depend>requests</exec_depend>
  <exec_depend>pyproj</exec_depend>
  <exec_depend>Pillow</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>open3d</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>python-telegram-bot</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
